tests/invalid_programs/invalid_self_arg.con
mod Test {
    struct A {}

    impl A {
       fn x(a: u32, &self) {}
    }
}
